--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@ button:active{
 }
 ::-webkit-scrollbar-track{
 	background: #030303;
-	cursor: pointer;
 }
 ::-webkit-scrollbar-thumb{
 	background: #111;
-	cursor: pointer;
 }
 .container #next, 
 .container #prev{
@@ -178,15 +176,15 @@ header{
 
 
 <center class="divl">
-<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Capital e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Capital e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Capital e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Capital e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Capital e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Capital e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Capital e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Capital e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Capital e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div><br/>
+<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Cambial e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Cambial e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Cambial e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Cambial e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Cambial e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Cambial e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Cambial e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Cambial e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Cambial e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div><br/>
 
 <div id="modalbox1" class="modal1">
 <div class="modalcontent1">
